# units

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Net.cpp  Net.h  PR_BODY.md  PR_INSTRUCTIONS.md  PR_SUMMARY.md  README.md  Unit.cpp  Unit.h  UnitsApp.cpp  generate_video.py
.github/workflows/: auto-pr.yml  benchmark.yml  preview-windows.yml  timelapse_run.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/bench/: bench_units
_codeql_build_dir/examples/console_app/: Makefile  cmake_install.cmake
_codeql_build_dir/examples/pixel_timelapse/: Makefile  cmake_install.cmake
bench/: CMakeLists.txt  benchmark.cpp
docs/: GENERATE_VIDEO.md  RESEARCH_SELF_REWIRING_NETWORKS.md
examples/console_app/: CMakeLists.txt  README.md
examples/console_app/src/: main.cpp
examples/pixel_timelapse/: CMakeLists.txt  README.md
examples/pixel_timelapse/src/: main.cpp  main_png_core.cpp
examples/realtime_viewer/: CMakeLists.txt  README.md
examples/realtime_viewer/src/: main.cpp
scripts/: make_timelapse.sh
src/: units_core.cpp  units_core.h
